# cpp-cli-app

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
test/: test_main.cpp
